# WTS-Language

./: CMakeLists.txt  README.md  WTS_Language.cbp  input_file.wts  main.cpp  todo.txt
WTS_Test/: WTS_Test.cbp  main.cpp
include/: ASTNode.h  ASTNode_Call.h  ASTNode_Prototype.h  ASTNode_Prototype_Function.h  ASTNode_Prototype_Function_Builtin.h  ASTNode_Prototype_Object.h  ASTNode_Prototype_Variable.h  ASTNode_Statement.h  ASTNode_Variable.h  ATSNode_Prototype.h  ATSNode_Prototype_Function.h  ATSNode_Prototype_Object.h  ATSNode_Statement.h  ATSNode_Variable.h  AbstractSyntaxTree.h  Block.h  CCodeGenerator.h  CodeGenerator.h  GenInfoCodeGenerator.h  Interpreter.h  Node.h  Program.h  StringReader.h  SyntaxErrorException.h  Value.h  WTS_Parser.h  string_reader.h
src/: ASTNode.cpp  ASTNode_Call.cpp  ASTNode_Prototype.cpp  ASTNode_Prototype_Function.cpp  ASTNode_Prototype_Function_Builtin.cpp  ASTNode_Prototype_Object.cpp  ASTNode_Prototype_Variable.cpp  ASTNode_Statement.cpp  ASTNode_Variable.cpp  ATSNode_Prototype.cpp  ATSNode_Prototype_Function.cpp  ATSNode_Prototype_Object.cpp  ATSNode_Statement.cpp  ATSNode_Variable.cpp  AbstractSyntaxTree.cpp  Block.cpp  CCodeGenerator.cpp  CodeGenerator.cpp  GenInfoCodeGenerator.cpp  Interpreter.cpp  Node.cpp  Program.cpp  StringReader.cpp  Value.cpp  WTS_Parser.cpp  string_reader.cpp
